snapshots/syntax/library/statements/rset/rset_inside_loop.snap
---
source: src/syntax/library/statements/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: ForStatement
      children:
        - kind: ForKeyword
          text: For
        - kind: Whitespace
          text: " "
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: i
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "1"
        - kind: Whitespace
          text: " "
        - kind: ToKeyword
          text: To
        - kind: Whitespace
          text: " "
        - kind: NumericLiteralExpression
          children:
            - kind: IntegerLiteral
              text: "10"
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: RSetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: RSetKeyword
                  text: RSet
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: buffer
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: data
                - kind: LeftParenthesis
                  text: (
                - kind: Identifier
                  text: i
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: NextKeyword
          text: Next
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: i
        - kind: Newline
          text: "\n"
