snapshots/syntax/library/statements/rset/rset_multiple_on_same_line.snap
---
source: src/syntax/library/statements/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RSetStatement
      children:
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: a
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: x
        - kind: ColonOperator
          text: ":"
        - kind: Whitespace
          text: " "
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: b
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: y
        - kind: Newline
          text: "\n"
