snapshots/syntax/library/statements/rset/rset_preserves_whitespace.snap
---
source: src/syntax/library/statements/rset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: RSetStatement
      children:
        - kind: RSetKeyword
          text: RSet
        - kind: Whitespace
          text: "   "
        - kind: Identifier
          text: target
        - kind: Whitespace
          text: "   "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "   "
        - kind: Identifier
          text: source
        - kind: Newline
          text: "\n"
